# ompeak

./: CMakeLists.txt  README.md  index.html  params.json
src/: float4.h  main.cpp
